[package]
name = "babysub-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
xz2 = "*"
flate2 = "*"
bzip2 = "*"
dhat = "0.3.3"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"

[features]
logging = []
dhat-heap = []    # if you are doing heap profiling

[profile.release]
debug = 1
